[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlframework"
version = "0.1.0"
description = "Deep Learning Framework for GeoAI"
authors = [
    {name = "Magnus Michel"}
]
dependencies = [
    "torch",
    "rasterio",
    "numpy",
    "pyyaml",
    "tqdm"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
